src/test/ui/const-generics/issues/issue-69654-run-pass.stderr
error[E0599]: no function or associated item named `foo` found for struct `Foo<{_: usize}>` in the current scope
  --> $DIR/issue-69654-run-pass.rs:16:10
   |
LL | struct Foo<const N: usize> {}
   | -------------------------- function or associated item `foo` not found for this
...
LL |     Foo::foo();
   |          ^^^ function or associated item not found in `Foo<{_: usize}>`
   |
   = note: the method `foo` exists but the following trait bounds were not satisfied:
           `[u8; _]: Bar<[(); _]>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
